@@ -287,7 +287,7 @@ that alist."
           (setq spec (compile-dwim-spec (car match))
                 exe (format-spec exe spec))
           (when (and (file-exists-p exe)
-                     (file-newer-than-file-p (buffer-file-name) exe))
+                     (file-newer-than-file-p exe (buffer-file-name)))
             (message "The exe file is newer! No need to compile!")
             (setq cancel t)))
         (when (not cancel)
@@ -328,7 +328,7 @@ that alist."
           (setq spec (compile-dwim-spec (car match))
                 exe (format-spec exe spec))
           (when (and (file-exists-p exe)
-                     (file-newer-than-file-p exe (buffer-file-name)))
+                     (file-newer-than-file-p (buffer-file-name) exe))
             (setq cancel t)
             (when (yes-or-no-p "The exe file is expired, should we compile first? ")
               (setq compile-dwim-run-buffer (current-buffer))
